Fix responsivness on mobile

--- a/pages/photos/Photos.module.scss
+++ b/pages/photos/Photos.module.scss
@@ -31,8 +31,28 @@ $gap: 1rem;
   row-gap: $gap;
   justify-items: center;
   padding-top: 2rem;
+
+  @include smartphone {
+    grid-template-columns: 1fr;
+  }
 }
 
 .gallery {
   padding-top: 2rem;
+}
+
+.img {
+  transition: 0.3s ease-in-out;
+
+  &:hover {
+    z-index: 1;
+    transform: scale(1.2);
+
+    &:before {
+      content: '';
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0.5);
+    }
+  }
 }
